fixed media query issues and fixed the text wrapping around image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
     
 }
 
-.header section {
+.header nav {
     padding-top: 20px;
     padding-bottom: 15px;
     text-align: center;
@@ -102,7 +102,6 @@ body {
 
 .project-2 img{
     margin-top: 25px;
-    /* margin-left: 47px; */
     width: 100%;
     height: 200px;
     border: 5px solid var(--yellow);
@@ -112,7 +111,6 @@ body {
 
 .project-2 img:hover {
     margin-top: 25px;
-    /* margin-left: 47px; */
     width: 100%;
     height: 200px;
     border: 5px solid var(--yellow);
@@ -249,7 +247,7 @@ body {
     transform: scale(1, 2);
 }
 
-.header section a {
+.header nav a {
     color: rgb(152, 152, 152);
     text-decoration: none;
 }
@@ -268,19 +266,19 @@ body {
 }
 .about-me img {
     float: left;
-    margin: 20px 5px 5px 45px;
+    margin: 20px 5px 2px 45px;
     width: 120px;
     height: 150px;
 }
 
 .about-me p {
     font-size: 16px;
-    display: flex;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: var(--headerColor);
     margin-top: 20px;
     margin-left: 45px;
     margin-right: 105px;
+    text-align: justify;
 }
 
 .work h1{
@@ -350,6 +348,8 @@ body {
 }    
 
 .table {
+    display: grid;
+    grid-template-columns: auto;
     margin-left: 47px;
     margin-right: 47px;
 }
@@ -362,11 +362,6 @@ body {
     }
 } */
     
-@media screen and (max-width: 480px ) {
-    .table {
-        display: block;
-    }
-}
 
 @media screen and (min-width: 769px) {
     .header {
@@ -383,7 +378,7 @@ body {
         margin-bottom: 12px;
     }
 
-    .header section {
+    .header nav {
         background-color: inherit;
         display: flex;
         justify-content: flex-end;
@@ -406,14 +401,12 @@ body {
         top: 340px;
     }
 
-    .project-1 img {
-        height: 400px;
-    }
+    
 
     .project-1 img:hover {
         height: 400px;
     }
-    .header section button {
+    .header nav button {
         margin-right: 10px;
     }
 
@@ -427,10 +420,16 @@ body {
     }
 }
 
-/* @media (min-width: 481px) {
+@media only screen and (min-width: 600px) {
     .table {
         display: grid;
         grid-template-columns: 50% 50%;
         column-gap: 10px;
     }
-} */
+    
+    .project-1 img {
+        height: 400px;
+    }
+}
+
+
